--- a/style.css
+++ b/style.css
@@ -50,9 +50,6 @@ p{
     font-weight: 500;
 }
 
-
-
-
 .container{
     display: flex;
     align-items: center;
@@ -65,22 +62,6 @@ p{
     background-color: rgba(255, 121, 121, 1);
     z-index: 2;
 }
-/* .container::before{
-    content: '';
-    position: absolute;
-    background: rgba(255, 121, 121, 1);
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-} */
-
-
-
-
-
 
 .text{
     z-index: 1;
@@ -89,11 +70,6 @@ p{
     align-items: center;
     gap: 16px;
 }
-
-
-
-
-
 
 .signup{
     z-index: 1;
@@ -139,7 +115,6 @@ form input{
     position: relative;
 
 }
-
 .fname-img, .lname-img, .email-img, .password-img{
     position: absolute;
     top: 50%;
@@ -147,10 +122,6 @@ form input{
     right: 20px;
     display: none;
 }
-
-
-
-
 
 #button{
     background: #38CC8B;
@@ -162,15 +133,10 @@ form input{
     font-weight: 600;
     line-height: 26px;
     letter-spacing: 1px;
+    border: none;
+    padding: 15px 0;
+    cursor: pointer;
 }
-
-
-
-
-
-
-
-
 
 
 
